--- a/index.html
+++ b/index.html
@@ -53,13 +53,18 @@
   </div>
   <div class="rel" id="">
     <div class="salvar s">
+      <ul>
+        <li><button type="button" name="button" class="btn-face"><img src="img/logo.svg" width="15" alt="" /></button></li>
+        <li><a href="insta.html"><button type="button" name="button" class="btn-insta"><img src="img/insta-logo2.svg" width="15" alt="" /></button></a></li>
+        <li></li>
+      </ul>
       <button type="button" id="btnSave" name="button" class="criar"><img src="img/download.svg" width="10" alt="" /> SALVAR OVERLEASY</button>
     </div>
   </div>
   <div class="widget" id="widget">
 
-    <div class="rela">
-      <div class="top fixed">
+    <div class="">
+      <div class="top ">
         <div class="content-menu flex">
           <div class="logoo">
             <img src="img/logo.svg" width="20" alt="" class="hk" />
