--- a/insta.html
+++ b/insta.html
@@ -15,7 +15,7 @@
       <div class="fixaviso avi">
         <div class="ll">
           <div class="fix">
-              Ainda estamos em contrução, desculpe pelo transtorno :(
+              Ainda estamos em construção, desculpe pelo transtorno :(
             </div>
         </div>
         <div class="lr">
@@ -24,11 +24,16 @@
         </div>
       </div>
       </div>
-    <div class="rel">
-      <div class="salvar s">
-        <button type="button" id="saveInsta" name="button" class="criar"><img src="img/download.svg" width="10" alt="" /> SALVAR OVERLEASY</button>
+      <div class="rel" id="">
+        <div class="salvar s">
+          <ul>
+            <li><button type="button" name="button" class="btn-face"><img src="img/logo.svg" width="15" alt="" /></button></li>
+            <li><button type="button" name="button" class="btn-insta"><img src="img/insta-logo2.svg" width="15" alt="" /></button></li>
+            <li></li>
+          </ul>
+          <button type="button" id="btnSave" name="button" class="criar"><img src="img/download.svg" width="10" alt="" /> SALVAR OVERLEASY</button>
+        </div>
       </div>
-    </div>
     <div class="instagram" id="instagram">
       <div class="menu-insta">
         <div class="tamanho tamanho-menu menu-flex">
