--- a/insta.html
+++ b/insta.html
@@ -27,11 +27,11 @@
       <div class="rel" id="">
         <div class="salvar s">
           <ul>
-            <li><button type="button" name="button" class="btn-face"><img src="img/logo.svg" width="15" alt="" /></button></li>
+            <li><a href="index.html"><button type="button" name="button" class="btn-face"><img src="img/logo.svg" width="15" alt="" /></button> </a></li>
             <li><button type="button" name="button" class="btn-insta"><img src="img/insta-logo2.svg" width="15" alt="" /></button></li>
             <li></li>
           </ul>
-          <button type="button" id="btnSave" name="button" class="criar"><img src="img/download.svg" width="10" alt="" /> SALVAR OVERLEASY</button>
+          <button type="button" id="saveInsta" name="button" class="criar"><img src="img/download.svg" width="10" alt="" /> SALVAR OVERLEASY</button>
         </div>
       </div>
     <div class="instagram" id="instagram">
