--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
                       <input type="text" name="nameedit" value="Overleasy" class="edit um">
                       <input type="text" name="nameedit" value="@Clique para editar" class="edit">
                       <ul class="menu ">
-                        <li><span>Página Inicial</span>
-                        </li>
+                        <li><span>Página Inicial</span>  </li>
                         <li>Sobre</li>
                         <li>Curtidas</li>
                         <li>Videos</li>
@@ -142,10 +141,7 @@
 
                     </div>
                   </div>
-                  <div class="btnn">
 
-                    <button type="button" name="button" class="criarr">Criar página</button>
-                    </div>
                 </div>
 
             </div>
