--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="fix">
 
             <div class="whi">
-                Novas atualizaçõessss! Clique aqui e confira o overleasy do <a href="insta.html" class="avvv">instagram</a>
+                <img src="img/ov.svg" width="50" alt="" /> Novas atualizaçõessss! Clique aqui e confira o overleasy do <a href="insta.html" class="avvv">instagram</a>
             </div>
 
         </div>
@@ -55,7 +55,7 @@
     <div class="salvar s">
       <ul>
         <li><button type="button" name="button" class="btn-face"><img src="img/logo.svg" width="15" alt="" /></button></li>
-        <li><a href="insta.html"><button type="button" name="button" class="btn-insta"><img src="img/insta-logo2.svg" width="15" alt="" /></button></a></li>
+        <li><a href="insta.html"><button type="button" name="button" class="btn-insta"><img src="img/insta-logo3.svg" width="15" alt="" /></button></a></li>
         <li></li>
       </ul>
       <button type="button" id="btnSave" name="button" class="criar"><img src="img/download.svg" width="10" alt="" /> SALVAR OVERLEASY</button>
