--- a/insta.html
+++ b/insta.html
@@ -15,7 +15,7 @@
       <div class="fixaviso avi">
         <div class="ll">
           <div class="fix">
-              Ainda estamos em construção, desculpe pelo transtorno :(
+              <img src="img/ov.svg" width="50" alt="" /> Ainda estamos em construção, desculpe pelo transtorno :(
             </div>
         </div>
         <div class="lr">
@@ -28,7 +28,7 @@
         <div class="salvar s">
           <ul>
             <li><a href="index.html"><button type="button" name="button" class="btn-face"><img src="img/logo.svg" width="15" alt="" /></button> </a></li>
-            <li><button type="button" name="button" class="btn-insta"><img src="img/insta-logo2.svg" width="15" alt="" /></button></li>
+            <li><button type="button" name="button" class="btn-insta"><img src="img/insta-logo3.svg" width="15" alt="" /></button></li>
             <li></li>
           </ul>
           <button type="button" id="saveInsta" name="button" class="criar"><img src="img/download.svg" width="10" alt="" /> SALVAR OVERLEASY</button>
