--- a/insta.html
+++ b/insta.html
@@ -48,7 +48,7 @@
         <div class="ff">
           <div class="ffg">
             <button type="button" id="btnSave" name="button" class="criar"><img src="img/download.svg" width="10" alt="" /> OVERLEASY</button>
-            <button type="button" id="btnSave2" name="button" class="criar"><img src="img/download.svg" width="10" alt="" /> MOBILE</button>
+            <!--<button type="button" id="btnSave2" name="button" class="criar"><img src="img/download.svg" width="10" alt="" /> MOBILE</button>-->
           </div>
         </div>
       </div>
@@ -57,33 +57,41 @@
       <div class="menu-insta">
         <div class="tamanho tamanho-menu menu-flex">
           <div class="test logo">
-            <img src="img/insta-logo.svg" width="34" alt="" /><img src="img/insta.png" width="100" alt="" />
+            <img src="img/insta-logo.svg" width="34" alt="" /><img src="img/insta.png" width="100" class="some" alt=""/>
           </div>
           <div class="test busca">
             <input type="text" name="name" value="" placeholder="Busca" class="busca-input">
           </div>
           <div class="test icones">
-            <img src="img/heart.svg" width="20" alt="" />
-            <img src="img/compass.svg" width="20" alt="" />
-            <img src="img/user-insta.svg" width="20" alt="" />
+            <img src="img/heart.svg" width="" alt="" class="icon-20-resp"/>
+            <img src="img/compass.svg" width="" alt="" class="icon-20-resp" />
+            <img src="img/user-insta.svg" width="" alt="" class="icon-20-resp" />
           </div>
         </div>
       </div>
       <div class="conteudo-insta">
         <div class="profile">
           <div class="profile-flex">
+
             <div class="foto-profile">
               <label for="fotoinstac">
-                <div class="ffooto">
-                  <input type="file" id="fotoinstac" name="fotoinstac" class="some" />
-                  <img id="ffinsta" class="imginsta" width="150" height="150" src="img/overleasy2.jpg" alt=" " />
-                </div>
+              <div class="rel">
+              <div class="envia2">
+                  <img src="img/photo-camera2.svg" class="enviap" alt="" width="20"/>
+              </div>
+
+                  <div class="ffooto">
+                    <input type="file" id="fotoinstac" name="fotoinstac" class="some" />
+                    <img id="ffinsta" class="imginsta" width="150" height="150" src="" alt=" " />
+                  </div>
+              </div>
               </label>
             </div>
+
             <div class="texto-profile">
               <div class="p-titulo">
                 <div class="p1">
-                  <input type="text" name="name" value="gustavoquinalha" class="ib nomepage">
+                  <input type="text" name="name" value="@Overleasy" class="ib nomepage">
                   <input type="button" name="name" value="Editar perfil" class="ib editar-perfil">
                   <img src="img/more.svg" width="30" class="ib more" alt="" />
                 </div>
@@ -96,7 +104,7 @@
                 </ul>
               </div>
               <div class="sobre">
-                <textarea name="name" rows="5" class="text-sobre">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</textarea>
+                <textarea name="name" rows="5" class="text-sobre">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</textarea>
                 <input id="fileUpload" multiple="multiple" type="file" name="fileUpload" class="some"/>
                 <input type="file" id="dstaqgg" name="dstaqgg" class="some" />
               </div>
@@ -105,50 +113,117 @@
         </div>
         <div class="tamanho flex">
           <div class="foto">
-            <div class="foto-insta" >
+            <div class="foto-insta borda-insta" >
               <div class="rel">
-                <img src="img/photo-camera.svg" class="envia" alt="" width="15"/>
+                <img src="img/photo-camera2.svg" class="enviai" alt="" width="15"/>
                 <label for="dstaqgg">
-                <img id="destt" class="foto-insta" src="" alt="" />
+                <img id="destt" class="foto-insta" src="img/tst.svg" alt="" />
                 </label>
               </div>
             </div>
           </div>
           <div class="foto">
-            <div class="foto-insta" >
+            <div class="foto-insta borda-insta" >
+              <div class="rel">
+                <img src="img/photo-camera2.svg" class="enviai" alt="" width="15"/>
+                <label for="dstaqgg">
+                <img id="instaum" class="foto-insta" src="img/tst.svg" alt="" />
+                </label>
+              </div>
             </div>
           </div>
           <div class="foto">
-            <div class="foto-insta" >
+            <div class="foto-insta borda-insta" >
+              <div class="rel">
+                <img src="img/photo-camera2.svg" class="enviai" alt="" width="15"/>
+                <label for="dstaqgg">
+                <img id="instadois" class="foto-insta" src="img/tst.svg" alt="" />
+                </label>
+              </div>
             </div>
           </div>
           <div class="foto">
-            <div class="foto-insta" >
+            <div class="foto-insta borda-insta" >
+              <div class="rel">
+                <img src="img/photo-camera2.svg" class="enviai" alt="" width="15"/>
+                <label for="dstaqgg">
+                <img id="instatres" class="foto-insta" src="img/tst.svg" alt="" />
+                </label>
+              </div>
             </div>
           </div>
           <div class="foto">
-            <div class="foto-insta" >
+            <div class="foto-insta borda-insta" >
+              <div class="rel">
+                <img src="img/photo-camera2.svg" class="enviai" alt="" width="15"/>
+                <label for="dstaqgg">
+                <img id="instaquatro" class="foto-insta" src="img/tst.svg" alt="" />
+                </label>
+              </div>
             </div>
           </div>
           <div class="foto">
-            <div class="foto-insta" >
+            <div class="foto-insta borda-insta" >
+              <div class="rel">
+                <img src="img/photo-camera2.svg" class="enviai" alt="" width="15"/>
+                <label for="dstaqgg">
+                <img id="instacinco" class="foto-insta" src="img/tst.svg" alt="" />
+                </label>
+              </div>
             </div>
           </div>
           <div class="foto">
-            <div class="foto-insta" >
+            <div class="foto-insta borda-insta" >
+              <div class="rel">
+                <img src="img/photo-camera2.svg" class="enviai" alt="" width="15"/>
+                <label for="dstaqgg">
+                <img id="instaseis" class="foto-insta" src="img/tst.svg" alt="" />
+                </label>
+              </div>
             </div>
           </div>
           <div class="foto">
-            <div class="foto-insta" >
+            <div class="foto-insta borda-insta" >
+              <div class="rel">
+                <img src="img/photo-camera2.svg" class="enviai" alt="" width="15"/>
+                <label for="dstaqgg">
+                <img id="instasete" class="foto-insta" src="img/tst.svg" alt="" />
+                </label>
+              </div>
             </div>
           </div>
           <div class="foto">
-            <div class="foto-insta" >
+            <div class="foto-insta borda-insta" >
+              <div class="rel">
+                <img src="img/photo-camera2.svg" class="enviai" alt="" width="15"/>
+                <label for="dstaqgg">
+                <img id="instaoito" class="foto-insta" src="img/tst.svg" alt="" />
+                </label>
+              </div>
             </div>
           </div>
         </div>
         <div class="botao">
           <input type="button" name="name" value="Carregar mais">
+        </div>
+      </div>
+      <div class="so-um">
+        <div class="so-titulo">
+          <div class="soo-f">
+            <div class="so-foto-p">
+            </div>
+          </div>
+          <div class="soo-f">
+            <div class="input-so">
+              <input type="text" name="name" value="Overleasy" class="so">
+            </div>
+          </div>
+          <div class="soo-fdata">
+            <span>5 min</span>
+          </div>
+        </div>
+        <div class="so-foto">
+
         </div>
       </div>
       <footer>
@@ -235,6 +310,14 @@
 
           reader.onload = function(e) {
             $('#destt').attr('src', e.target.result);
+            $('#instaum').attr('src', e.target.result);
+            $('#instadois').attr('src', e.target.result);
+            $('#instatres').attr('src', e.target.result);
+            $('#instaquatro').attr('src', e.target.result);
+            $('#instacinco').attr('src', e.target.result);
+            $('#instaseis').attr('src', e.target.result);
+            $('#instasete').attr('src', e.target.result);
+            $('#instaoito').attr('src', e.target.result);
           }
 
           reader.readAsDataURL(input.files[0]);
